# pickysteve

./: .gitattributes  .gitignore  .mcp.json  AWESOME_SUBMISSIONS.md  CONTRIBUTING.md  DEEP_CONTEXT.md  FINDINGS.md  INTEGRATIONS.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  SIM_REPORT.md  TEST_REPORT.md  glama.json  pyproject.toml  requirements.txt  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
assets/: benchmarks.html  pickysteve_live.html
eval/: accuracy_set.jsonl  attacks.jsonl  build_sim.py  build_sim_ext.py  calibrate.py  calibrate_conformal.py  calibrated_floor.json  cleanlab_audit.py  conformal_cal.json  demo_upgrades.py  dump_judge_pools.py  example_requests.txt  harder_gen_workflow.js  labeled_pairs.jsonl  phi4_warm.py  probe_reranker.py  probe_subq.py  redteam_gate.py  run_accuracy.py  run_examples.py  run_security.py  run_sim.py  run_sim_repeat.py  run_stress.py  sim_tasks.jsonl  sim_tasks_hard.jsonl  sim_tasks_harder.jsonl  sim_tasks_heldfails.jsonl  sim_tasks_heldout.jsonl  sim_tasks_heldout2.jsonl  sim_tasks_heldout_clean.jsonl  sim_tasks_mega.jsonl  sim_tasks_mega_warm.jsonl  sim_tasks_targeted.jsonl  skill_kg.json  test_connectors.py  test_gate_security.py  two_tier_eval.py  warm_cache.py  warm_docgate.py
pickysteve/: __init__.py  __main__.py  assembly.py  config.py  conformal.py  execution.py  kg.py  llm.py  logging_jsonl.py  pipeline.py  registry.py  rerank.py  retrieval.py  router.py  security_gate.py  setup.py
registry/: accessibility-audit.md  api-design-reviewer.md  brand-voice.md  (+19 more)
(+63 files in other folders)
