[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pickysteve"
dynamic = ["version"]
description = "Skill router and context picker for coding agents — picks the right skill per prompt, scans both the request and every retrieved doc for prompt injection."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "KernelLord" }]
keywords = [
  "mcp", "mcp-server", "skill-router", "context-engineering",
  "prompt-injection", "coding-agents", "claude-code", "cursor", "aider",
  "rag", "reranking",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Security",
]
dependencies = [
  "stackone-defender[onnx]",
  "rank-bm25",
  "sentence-transformers",
  "openai",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/KernelLord/pickysteve"
Repository = "https://github.com/KernelLord/pickysteve"
Issues = "https://github.com/KernelLord/pickysteve/issues"
Changelog = "https://github.com/KernelLord/pickysteve/releases"

[project.scripts]
pickysteve = "pickysteve.__main__:main"

[tool.hatch.version]
path = "pickysteve/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pickysteve"]

[tool.hatch.build.targets.sdist]
include = ["pickysteve", "README.md", "LICENSE", "requirements.txt"]
